Fix overflow / layout bugs

--- a/styles.css
+++ b/styles.css
@@ -14,21 +14,25 @@ img {
 }
 
 body {
-  /* min-height: 100vh;
-  width: 100%; */
+  height: 100vh;
+  width: 100%;
   display: grid;
   grid-template-areas:
     "sidebar header"
     "sidebar main";
-  grid-template-rows: 0.8fr 4fr;
+  grid-template-rows: auto 1fr;
   grid-template-columns: 15rem 1fr;
 }
 
 /* --- Sidebar --- */
 .sidebar {
+  height: 100%;
   grid-area: sidebar;
   background-color: var(--primary-color);
   color: white;
+  position: fixed;
+  width: 15rem;
+  overflow: auto;
 }
 
 /* Sidebar links / menuitems */
@@ -80,9 +84,12 @@ body {
 /* --- Header --- */
 header {
   grid-area: header;
-  /* border-bottom: 1px solid black; */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   z-index: 10;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  height: 150px;
 }
 
 /* Top Header */
@@ -90,6 +97,8 @@ header {
   display: flex;
   margin: 1rem 1.5rem;
   gap: 2rem;
+  align-items: center;
+  max-height: 4rem;
 }
 
 .top-header > * {
@@ -129,7 +138,7 @@ button.search-btn {
   flex: 1 2 0;
   justify-content: flex-end;
   gap: 1.5rem;
-  margin-right: 2vw;
+  margin-right: 2rem;
 }
 
 .account .notification-icon {
@@ -152,6 +161,8 @@ button.search-btn {
   display: flex;
   margin: 0 1.5rem 1rem 1.5rem;
   gap: 2rem;
+  align-items: center;
+  max-height: 4rem;
 }
 
 .bottom-header > * {
@@ -186,11 +197,12 @@ button.search-btn {
 }
 
 /* (Bottom) Header - Actions */
+
 .bottom-header .actions {
   flex: 1;
   gap: clamp(5px, 1.2vw, 1.3vw);
   justify-content: flex-end;
-  margin-right: 2vw;
+  margin-right: 2rem;
 }
 
 .actions button {
@@ -210,8 +222,10 @@ button.search-btn {
 .content {
   grid-area: main;
   background-color: var(--secondary-color);
-  padding: 3vh 2vw 1vh 1vw;
-  /* display: grid; */
+  padding: 2rem 2rem 0 1rem;
+  display: grid;
+  height: 100%;
+
   grid-template-columns: 1fr auto;
   /* 1fr auto */
   grid-template-rows: min-content 1fr;
@@ -221,7 +235,7 @@ button.search-btn {
     "projects announcements"
     "projects trending";
 
-  border: 1px solid black;
+  border: 1px solid red;
 }
 
 .content h3 {
@@ -248,10 +262,7 @@ button.search-btn {
   border-left: 5px solid orange;
   display: flex;
   flex-direction: column;
-}
-
-.projects .card .card-contents {
-  margin: 1rem;
+  padding: 2rem 1.5rem 1.5rem 1rem;
 }
 
 .projects .card .card-title {
@@ -264,11 +275,20 @@ button.search-btn {
 }
 
 .projects .card .card-actions {
+  align-self: flex-end;
   margin-top: auto;
+  display: flex;
+  gap: 1rem;
+  /* background-color: red; */
 }
 
 .announcements {
   grid-area: announcements;
+}
+
+.announcement {
+  width: 25ch;
+  padding: 1rem 0;
 }
 
 .trending {
